Solved the CSS and html structure coding for the New Arrivals section of the Product segment. It was a challenging Inception scenario (or fractals) where there were divs within divs and each required flexbox to align properly. Now moving onto the Dress Collection segment.

--- a/css/typography.scss
+++ b/css/typography.scss
@@ -30,6 +30,7 @@ $themeWhite3: rgba(220, 221, 222,0.6);
 
 // for the product display section
 $productColourBack: #E9EAEB;
+$productColourText: #7D7E7F;
 
 // // END COLOURS ------------------------------------------------
 
