--- a/css/products.042715.1.scss
+++ b/css/products.042715.1.scss
@@ -2,6 +2,531 @@
 ///// 		PRODUCTS
 ///////////////////////////////////////////////
 
+section.newArrivals, section.dressCollection {
+	background: $productColourBack;
 
+	// applying a flexbox screws up the wardrobeDisplay
+	// @include flexboxSettings042215a;
+	// may need to use text-align center instead
+	
+	text-align: center;
+
+	@include sectionPadding041515(5%,5%);
+
+	p.introHead {
+		font-size: $basefontsize*0.9;
+		text-transform: uppercase;
+		font-weight: bold;
+		letter-spacing: 0.2em;
+		margin-bottom: 1.5%;
+	}
+
+	h2 {
+		font-size: $basefontsize*2;
+		text-transform: uppercase;
+		font-weight: 900;
+		letter-spacing: 0.25em;
+		margin-bottom: 1%;
+	}
+
+	aside.companyLogo {
+		// copy any padding and margin from the img placeholder
+	}
+
+	img {
+		margin-bottom: 3%;
+	}
+
+	p {
+		text-transform: uppercase;
+	}
+
+	p.subhead {
+		font-size: $basefontsize;
+		text-transform: uppercase;
+	}
+
+	div.purchaseShader {
+		// this is the shader box that appears on hover over the element in question
+	}
+
+	// section.newArrivals {
+	// 	.left {
+	// 		background: blue;
+	// 	}
+	// 	.right {
+	// 		background: red;
+	// 	}
+	// }
+	
+}
+
+
+
+// NEW ARRIVALS  ------------------------------------------------
+section.newArrivals {
+
+	// @include sectionPadding041515(5%,13%);
+	@include sectionPadding041515(5%,0);
+
+	border-bottom: 1px solid blue;
+
+	height: auto;
+	width:auto;
+
+	div.left, div.right {
+		position: relative;
+	}
+
+	
+	// WARDROBE DISPLAY  ------------------------------------------------
+	// please note that heights must be set for the divs to exist and expand, otherwise everything collapses in on itself
+
+	section.wardrobeDisplay {
+		// apply margin, padding reset
+		margin: 0;
+		padding: 0;
+
+		width: 100%;
+		// height: 80vh;
+		// height: auto;
+		
+		// TESTING
+		
+		// border: 1px solid purple;
+		
+		// overflow: hidden;
+
+		@include sectionMargins041515(3.4%,30%);
+
+		@include flexboxSettings041715a;
+
+		@include purchaseShader042815a1;
+
+		// TESTING
+		// div {
+		// 	// width: 209px;
+		// 	// height: 212px;
+		// 	// width: 13.0625em;
+		// 	// height: 13.25em;
+		// 	// border: 1px solid red;
+		// 	@include productDivDimensions042815a1;
+		// }
+		
+		h3 {
+			font-size: $basefontsize*1.3;
+			text-transform: uppercase;
+			font-weight: 900;
+			letter-spacing: 0.2em;
+			margin-bottom: 7%;
+		}
+
+		p.copy {
+			font-size: $basefontsize*0.9;
+			text-transform: uppercase;
+			letter-spacing: 0.1em;
+			margin-bottom: 5%;
+		}
+
+		p.price {
+			font-size: $basefontsize*1.3;
+			text-transform: uppercase;
+			letter-spacing: 0.1em;
+		}
+	}
+	// // END WARDROBE DISPLAY ------------------------------------------------
+
+	// LEFT - section.wardrobeDisplay  ------------------------------------------------
+	section.wardrobeDisplay div.left {
+		// apply margin, padding reset
+		margin: 0;
+		padding: 0;
+
+		// flex child
+		flex: 1 50%;
+		// margin: auto;
+
+		// LEFT TOP  ------------------------------------------------
+		div.top {
+			// apply margin, padding reset
+			margin: 0;
+			padding: 0;
+
+			//flexbox
+			@include flexboxSettings041715a;
+			width: 100%;
+
+			// border: 1px solid orange;
+
+			div.left,div.right {
+				margin:0;
+				padding:0;
+			}
+		}
+
+		// LEFT TOP LEFT
+		div.top div.left {
+			// apply margin, padding reset
+			margin: 0;
+			padding: 0;
+
+			// flex child
+			flex: 1 50%;
+			// margin: auto;
+
+			//flexbox
+			@include flexboxSettings042215a;
+			justify-content: flex-start;
+			align-content: flex-start;
+			align-items: flex-start;
+			
+			width: 13.0625em;
+			height: 26.5em;
+
+			padding: 5%;
+
+			// background-image: url(../images/);
+			
+			// border: 3px dotted skyblue;
+
+			// BACKGROUND  ------------------------------------------------
+			// background-image: url('../images/products/image4.jpg');
+			// background-repeat: no-repeat;
+			// background-size: cover;
+			// background-position: center;
+			@include backgroundImage042815a('../images/products/image4.jpg');
+			// // END BACKGROUND ------------------------------------------------
+
+			// &:hover > div.purchaseShader {
+			// 	display: flex;
+			// }
+
+			@include purchaseShaderDisplay042815a;
+
+		}
+
+		// LEFT TOP RIGHT
+		div.top div.right {
+			// apply margin, padding reset
+			margin: 0;
+			padding: 0;
+
+			// flex child
+			flex: 1 50%;
+			// margin: auto;
+			
+			//flexbox
+			@include flexboxSettings042215a;
+
+			// div {
+			// 	//flex child
+			// 	// flex: 1 auto;
+			// 	width: 100%;
+			// 	position: relative;
+			// 	height: auto;
+			// }
+
+			// border: 3px dashed black;
+
+			// LEFT TOP RIGHT BOTH
+			div.top, div.bottom {
+				//flex child
+				// flex: 1 auto;
+				width: 100%;
+				position: relative;
+				// height: auto;
+				// background: blue;
+				height: 13.25em;
+				// @include productDivDimensions042815a2(blue);
+			}
+
+			// LEFT TOP RIGHT TOP
+			div.top {
+				border: none;
+				@include backgroundImage042815a('../images/products/image1.jpg');
+
+				// &:hover > div.purchaseShader {
+				// 	display: flex;
+				// }
+
+				@include purchaseShaderDisplay042815a;
+			}
+
+			// LEFT TOP RIGHT BOTTOM
+			div.bottom {
+				@include backgroundImage042815a('../images/products/image3.jpg');
+
+				@include purchaseShaderDisplay042815a;
+			}
+		}
+		// // END LEFT TOP ------------------------------------------------
+		
+
+		// LEFT BOTTOM  ------------------------------------------------
+		div.bottom {
+			// apply margin, padding reset
+			margin: 0;
+			padding: 0;
+
+			//flexbox
+			@include flexboxSettings041715a;
+			width: 100%;
+
+			// border: 3px solid darkgreen;
+
+			width: 100%;
+			height: 13.25em;
+		}
+
+		// LEFT BOTTOM BOTH
+		div.bottom div.left, div.bottom div.right {
+			@include purchaseShaderDisplay042815a;
+		}
+
+		// LEFT BOTTOM LEFT
+		div.bottom div.left {
+			// apply margin, padding reset
+			margin: 0;
+			padding: 0;
+
+			// flex child
+			flex: 1 50%;
+			// margin: auto;
+			
+			width: 50%;
+			height: 13.25em;
+			// border: 3px groove violet;
+
+			@include backgroundImage042815a('../images/products/image6.jpg');
+		}
+
+		// LEFT BOTTOM RIGHT
+		div.bottom div.right {
+			// apply margin, padding reset
+			margin: 0;
+			padding: 0;
+
+			// flex child
+			flex: 1 50%;
+			// margin: auto;
+			
+			width: 50%;
+			height: 13.25em;
+			// border: 3px outset crimson;
+			
+			@include backgroundImage042815a('../images/products/image7.jpg');
+
+		}
+		// // END LEFT BOTTOM ------------------------------------------------
+
+	}
+	// // END LEFT - section.wardrobeDisplay ------------------------------------------------
+	
+	// RIGHT - section.wardrobeDisplay  ------------------------------------------------
+	section.wardrobeDisplay div.right {
+		// apply margin, padding reset
+		margin: 0;
+		padding: 0;
+
+		// flex child
+		flex: 1 50%;
+		margin: auto;
+
+		// RIGHT TOP  ------------------------------------------------
+		div.top {
+			// apply margin, padding reset
+			margin: 0;
+			padding: 0;
+
+			//flexbox
+			@include flexboxSettings041715a;
+			width: 100%;
+
+			height: 13.25em;
+			// border: 3px dashed brown;
+		}
+
+		// RIGHT TOP BOTH
+		div.top div.left, div.top div.right {
+			@include purchaseShaderDisplay042815a;
+		}
+
+		// RIGHT TOP LEFT
+		div.top div.left {
+			// apply margin, padding reset
+			margin: 0;
+			padding: 0;
+
+			// flex child
+			flex: 1 50%;
+			// margin: auto;
+
+			// border: 1px double aqua;
+			height: 13.25em;
+
+			@include backgroundImage042815a('../images/products/image5.jpg');
+		}
+
+		// RIGHT TOP RIGHT
+		div.top div.right {
+			// apply margin, padding reset
+			margin: 0;
+			padding: 0;
+
+			// flex child
+			flex: 1 50%;
+			// margin: auto;
+
+			// border: 1px ridge blue;
+			height: 13.25em;
+
+			@include backgroundImage042815a('../images/products/image2.jpg');
+		}
+		// // END RIGHT TOP ------------------------------------------------
+		
+
+		// RIGHT BOTTOM  ------------------------------------------------
+		div.bottom {
+			// apply margin, padding reset
+			margin: 0;
+			padding: 0;
+
+			width: 100%;
+			height: 26.5em;
+			// height:auto;
+
+			// border: 6px solid lightgrey;
+
+			//flexbox
+			@include flexboxSettings041715a;
+		}
+
+		// RIGHT BOTTOM LEFT
+		div.bottom div.left {
+			// apply margin, padding reset
+			margin: 0;
+			padding: 0;
+
+			//flex child
+			flex: 1 auto;
+			// should set to 50%
+			flex: 1 50%;
+			// margin: auto;
+
+			// width: 100%;
+			height: 26.5em;
+			// height:auto;
+
+			// border: 3px dashed forestgreen;
+
+			//flexbox
+			@include flexboxSettings042215a;
+			// justify-content:flex-end;
+		}
+
+		// RIGHT BOTTOM LEFT BOTH
+		div.bottom div.left .top, div.bottom div.left .bottom {
+			width: 100%;
+			height: 13.25em;
+			// border: 1px dotted blue;
+		}
+
+		// RIGHT BOTTOM LEFT BOTTOM
+		div.bottom div.left .bottom {
+			@include flexboxSettings042215a;
+			justify-content: flex-start;
+
+			@include purchaseShaderDisplay042815a;
+		}
+
+		// RIGHT BOTTOM LEFT COPY
+		div.bottom div.left .copy {
+			text-align: left;
+			// margin-bottom: 5%;
+			margin-top: 10%;
+		}
+
+		// RIGHT BOTTOM RIGHT
+		div.bottom div.right {
+			// apply margin, padding reset
+			margin: 0;
+			padding: 0;
+
+			//flex child
+			flex: 1 auto;
+			// should set to 50%
+			flex: 1 50%;
+			// margin: auto;
+
+			height: 26.5em;
+			// height:auto;
+
+			// border: 3px dotted red;
+
+			@include backgroundImage042815a('../images/models/image11.jpg');
+
+			@include purchaseShaderDisplay042815a;
+		}
+		// // END RIGHT BOTTOM ------------------------------------------------
+		
+	}
+	// // END RIGHT - section.wardrobeDisplay ------------------------------------------------
+}
+// // END NEW ARRIVALS ------------------------------------------------
+
+
+// DRESS COLLECTION  ------------------------------------------------
+section.dressCollection {
+	// margin-top: 5%;
+	@include sectionPadding041515(0,5%);
+
+	border-bottom: 1px solid red;
+
+	// NAV  ------------------------------------------------
+	nav {
+		width: 100%;
+		margin-bottom: 1%;
+	}
+
+	span.divider {
+		display: inline-block;
+		margin:0;
+		padding:0;
+		font-size: $basefontsize*1.2;
+		margin-left: 1%;
+		margin-right: 1.5%;
+	} 
+
+	nav a {
+		display: inline-block;
+		margin:0;
+		padding:0;
+		color: black;
+		&:visited {
+			color: black;
+		}
+		&:link {
+			color: black;
+		}
+
+	}
+
+	// since it's your h2 that's styled (and appears) don't place a font size property on the a
+	nav a.popular h2 {
+		font-size: $basefontsize*1.2;
+	}
+
+	nav a.popular h2 {
+		// font-size: $basefontsize;
+	}
+
+	nav a.random h2 {
+		font-size: $basefontsize*1.2;
+	}
+	// // END NAV ------------------------------------------------
+
+	
+}
+// // END DRESS COLLECTION ------------------------------------------------
 
 ///////////////////////////////////////////////
