--- a/css/typography.scss
+++ b/css/typography.scss
@@ -23,14 +23,21 @@
 // colours must go before the base
 $themeYellow: #FBF200;
 $themeYellow2: rgba(251, 242, 0,0.4);
+$themeYellow3: rgba(251, 242, 0,0.6);
+$themeYellow4: rgba(251, 242, 0,0.8);
 $themeGrey: #F5F6F7;
+$themeGreyAlt1: #E9EAEB;
 $themeWhite: #DCDDDE;
 $themeWhite2: rgba(220, 221, 222,0.4);
 $themeWhite3: rgba(220, 221, 222,0.6);
+$themeWhiteAlt1: #FEFFFF;
 
 // for the product display section
 $productColourBack: #E9EAEB;
 $productColourText: #7D7E7F;
+
+// featured
+$featureArrowColour: #878889;
 
 // // END COLOURS ------------------------------------------------
 
@@ -46,6 +53,17 @@ $baseFontColor: black;
 $baseHoverColor: red;
 $basebackcolor: grey;
 // // END BASE ------------------------------------------------
+
+// PRODUCTS  ------------------------------------------------
+$chifon1: #544748;
+$chifon2: #313233;
+$cami1: #E4E3DE;
+$cami2: #C8C0A8;
+$flare1: #FEFFFF;
+$flare2: #544748;
+$abstractD1: #CBBFAA;
+$abstractD2: #534748;
+// // END PRODUCTS ------------------------------------------------
 
 
 ////////////////////////////////////////////
