--- a/includes/variables.global.041415.1.jade
+++ b/includes/variables.global.041415.1.jade
@@ -5,6 +5,14 @@
 //- variables I want to be able to access in any part of the project code
 
 //- ===================================
+//- 		GENERAL
+//- ===================================
+
+- var companyLogoEnabled = 'false';
+
+//- END GENERAL
+
+//- ===================================
 //- 		NAVIGATION MENU
 //- ===================================
 
