--- a/includes/links.jade
+++ b/includes/links.jade
@@ -8,6 +8,7 @@ link(rel="stylesheet", href="./images/favicon.png")
 //- END FAVICONS
 
 link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css")
-link(href="http://fonts.googleapis.com/css?family=Gudea", rel="stylesheet", type="text/css")
+//- <link href='http://fonts.googleapis.com/css?family=Gudea:400,700,400italic' rel='stylesheet' type='text/css'>
+link(href="http://fonts.googleapis.com/css?family=Gudea:400,700,400italic", rel="stylesheet", type="text/css")
 //- your custom stylesheet should be the very last
 link(href="./css/style.css", rel="stylesheet", type="text/css")
