--- a/css/mixins.universal.scss
+++ b/css/mixins.universal.scss
@@ -72,7 +72,7 @@
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: space-around;
-	align-content: center;
+	align-content: space-around;
 	align-items: center;
 }
 
