--- a/css/typography.scss
+++ b/css/typography.scss
@@ -39,6 +39,11 @@ $productColourText: #7D7E7F;
 // featured
 $featureArrowColour: #878889;
 
+// footer
+$footerColourBack: #060708;
+$footerColourBackLink: #1C1D1E;
+$footerColourBorder: #1D1E1F;
+
 // // END COLOURS ------------------------------------------------
 
 // BASE  ------------------------------------------------
