--- a/includes/mixins.project.041415.1.jade
+++ b/includes/mixins.project.041415.1.jade
@@ -21,7 +21,8 @@ mixin companyLogo1(placeHolder)
 	//- please see the control switch variable in variables.global.jade called var companyLogoEnabled
 
 	if placeHolder
-		img(src="http://lorempixel.com/60/30", alt="Icon Placeholder")
+		aside.companyLogo
+			img(src="http://lorempixel.com/60/30", alt="Icon Placeholder")
 	else
 		aside.companyLogo
 			.bar
