--- a/includes/newsletter.042715.1.jade
+++ b/includes/newsletter.042715.1.jade
@@ -4,10 +4,13 @@
 
 section.newsletter
 	.wrapper
-		p Get latest new and coupon from lady
+		p.leadIn Get latest news and coupons from lady
 		h2 Subscribe
-		+companyLogo1
-		//- a FA icon of a paper airplane must be placed ::before the input and/or absolutely positioned
-		input(placeholder='Your Email Address')
+		+companyLogo1(companyLogoEnabled)
+		
+		form(id="newsletter1", method="", action="")
+			span
+				//- a FA icon of a paper airplane must be placed ::before the input and/or absolutely positioned
+				input(type='email', name='email', placeholder='Your Email Address')
 
 ////////////////////////////////////////////
