--- a/includes/footer.042715.1.jade
+++ b/includes/footer.042715.1.jade
@@ -8,11 +8,12 @@
 
 mixin blogHeadlineEntry1(headline,imgSrc,altText)
 	aside.blogHeadline
-		//- image 52x43px
-		if imgSrc
-			img(src=imgSrc, alt=altText)
-		else
-			img(src="http://lorempixel.com/52/43", alt="Lorem Placeholder Image")
+		div.image
+			//- image 52x43px
+			if imgSrc
+				img(src=imgSrc, alt=altText)
+			else
+				img(src="http://lorempixel.com/52/43", alt="Lorem Placeholder Image")
 		
 		.meta
 			h4=headline
@@ -38,38 +39,70 @@ mixin twitterEntry1(headline,tweet,timeElapse)
 
 section.footer
 	.wrapper
+
+		//- ===================================
+		//- 		QUICK LINK
+		//- ===================================
+
 		section.quickLink
-			+companyLogo1
+			h2 Quick-Link
+			+companyLogo1(companyLogoEnabled)
 			//- on :hover you'll need the custom bar to appear and pad/indent the link
-			a(href="#") My Account
-			a(href="#") Contact Us
-			a(href="#") Store Location
-			a(href="#") Size Guide
-			a(href="#") Shipping Info
+			div.linkbox
+				a(href="#") My Account
+				a(href="#") Contact Us
+				a(href="#") Store Location
+				a(href="#") Size Guide
+				a(href="#") Shipping Info
+
+		//- END QUICK LINK
 		
+
+		//- ===================================
+		//- 		RECENT BLOGS
+		//- ===================================
+
 		section.recentBlogs
-			+companyLogo1
+			h2 Recent Blogs
+			+companyLogo1(companyLogoEnabled)
 			//- when you hover over the item a "Read More" should appear
 			//- enter blog entries
 			+blogHeadlineEntry1('Top 10 Trending Dresses')
 			+blogHeadlineEntry1('The Awesome V-Line')
 			+blogHeadlineEntry1('News About Opening Hours of the Store')
+
+		//- END RECENT BLOGS
 		
+		
+		//- ===================================
+		//- 		TAGS
+		//- ===================================
+
 		section.tags
-			+companyLogo1
-			a(href="#") Dress
-			a(href="#") Lips
-			a(href="#") Dotted
-			a(href="#") Accessories
-			a(href="#") Cami
-			a(href="#") Cross
-			a(href="#") Abstract
-			a(href="#") Babydoll
-			a(href="#") Saleoff
-			a(href="#") Floral
+			h2 Tags
+			+companyLogo1(companyLogoEnabled)
+			div.tagBox
+				a(href="#") Dress
+				a(href="#") Lips
+				a(href="#") Dotted
+				a(href="#") Accessories
+				a(href="#") Cami
+				a(href="#") Cross
+				a(href="#") Abstract
+				a(href="#") Babydoll
+				a(href="#") Saleoff
+				a(href="#") Floral
+
+		//- END TAGS
 		
+		
+		//- ===================================
+		//- 		CONTACT US
+		//- ===================================
+
 		section.contactinfo
-			+companyLogo1
+			h2 Find Us On
+			+companyLogo1(companyLogoEnabled)
 			aside.socialIcons
 				//- the following are pure links <a> with a <span> child
 				//- a(href=fbLink,class='fa-facebook')
@@ -84,17 +117,28 @@ section.footer
 				+iconLink042315a('fa-google-plus',gplusLink)
 			aside.twitterFeed
 				+twitterEntry1('@Kyles','Lorem ipsum dolor sit amet, consectetur adipisicing elit.','5h')
-				+twitterEntry1('@James','Lorem ipsum dolor sit amet, consectetur adipisicing elit.','5h')
+				+twitterEntry1('@James','Lorem ipsum dolor sit amet, consectetur adipisicing elit.','6h')
+
+		//- END CONTACT US
+
+//- ===================================
+//- 		COPYRIGHT
+//- ===================================
 
 section.copyright
 	.wrapper
 		//- make the p element a block
-		p Copyright 2015 By Lady Store . All rights reserved
-		nav
+		div.copyright
+			p Copyright 2015 By Lady Store . All rights reserved
+		nav.menu
 			+linkTemplate042115a('Home Page',homeLink)
 			+linkTemplate042115a('About Us',aboutLink)
 			+linkTemplate042115a('Payment',payLink)
 			+linkTemplate042115a('Shipping',shipLink)
+
+//- END COPYRIGHT		
+
+
 
 
 ////////////////////////////////////////////
